@@ -3,6 +3,10 @@
   * src/cmd/cmd_bfin.c (cmd_bfin_run): Make sure the part is a Blackfin before
     we try calling functions that don't exist and segfault.
 
+  * include/urjtag/parse.h, src/global/parse.c: Split tokenization of lines out
+    of urj_parse_line and into its own function urj_tokenize_lines.  This lets
+    us reuse this code elsewhere.
+
 2011-02-18  Mike Frysinger  <vapier@gentoo.org>
 
   * src/bfin/bfin-part.c (_bfin_part_init): Add missing "void" to param list.
